[gd_scene load_steps=34 format=2]

[ext_resource path="res://IntroScenes/PlayerCreation.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Pictures/BAMBO_PIC.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Pictures/introbg.PNG" type="Texture" id=3]
[ext_resource path="res://Graphics/Pictures/trainer000.PNG" type="Texture" id=4]
[ext_resource path="res://Audio/BGM/PU-Intro.ogg" type="AudioStream" id=5]
[ext_resource path="res://Graphics/Pictures/BAMBO_PIC2.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Pictures/BAMBO_BLINK.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Battlers/035.png" type="Texture" id=8]
[ext_resource path="res://Audio/SE/035Cry.wav" type="AudioStream" id=9]
[ext_resource path="res://IntroScenes/GenderSelect.gd" type="Script" id=10]
[ext_resource path="res://Graphics/Pictures/Gender/genderbg2.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Pictures/Gender/genderboy.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Characters/trainer000.PNG" type="Texture" id=13]
[ext_resource path="res://Graphics/Characters/trainer009.png" type="Texture" id=14]
[ext_resource path="res://Graphics/Characters/trainer001.png" type="Texture" id=15]
[ext_resource path="res://Audio/SE/BW2MenuSelect.WAV" type="AudioStream" id=16]
[ext_resource path="res://Graphics/Windowskins/skin1.png" type="Texture" id=17]
[ext_resource path="res://Fonts/pkmnem.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://Graphics/Pictures/selarrow.png" type="Texture" id=19]
[ext_resource path="res://Audio/SE/Choose.WAV" type="AudioStream" id=20]
[ext_resource path="res://Graphics/Windowskins/frlgtextskin.png" type="Texture" id=21]

[sub_resource type="Animation" id=1]
resource_name = "PlayerCreation"
length = 3.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ false ],
"method": "dialogue"
}, {
"args": [  ],
"method": "fade_bombo"
}, {
"args": [  ],
"method": "dialogue"
}, {
"args": [  ],
"method": "dialogue"
}, {
"args": [  ],
"method": "dialogue"
}, {
"args": [ false ],
"method": "dialogue"
}, {
"args": [ false ],
"method": "dialogue"
}, {
"args": [  ],
"method": "play_bombo_slide"
}, {
"args": [ false ],
"method": "dialogue"
}, {
"args": [  ],
"method": "slide_back"
}, {
"args": [ false ],
"method": "dialogue"
}, {
"args": [  ],
"method": "show_gender_select"
}, {
"args": [  ],
"method": "final"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bombo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bombo:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GenderSelect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Fade:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Fade:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2.2, 3.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("GenderColor:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "BomboSlideBack"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("P035:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("P035:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -100, 0 ), Vector2( -100, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "slide_finished"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "BomboSlideOut"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -100, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("P035:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("P035:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_035_cry"
}, {
"args": [  ],
"method": "slide_finished"
} ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "resume"
} ]
}

[sub_resource type="Animation" id=5]
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5.7, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "FadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "DoneFade"
}, {
"args": [  ],
"method": "ShowDialog"
}, {
"args": [  ],
"method": "Confirmation"
} ]
}

[sub_resource type="Animation" id=7]
length = 15.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -768, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Shrink"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.392157, 0.392157, 0.392157, 0.784314 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Shrink"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.392157, 0.392157, 0.392157, 0.784314 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Shrink"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.392157, 0.392157, 0.392157, 0.784314 ) ]
}

[sub_resource type="DynamicFont" id=11]
size = 26
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=12]
size = 26
font_data = ExtResource( 18 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "PlayerCreation"
anims/PlayerCreation = SubResource( 1 )

[node name="BackGround" type="TextureRect" parent="."]
margin_right = 512.0
margin_bottom = 384.0
texture = ExtResource( 3 )

[node name="GenderColor" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Hero" type="TextureRect" parent="GenderColor"]
margin_left = 180.0
margin_top = 100.0
margin_right = 340.0
margin_bottom = 260.0
texture = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="Bombo" type="TextureRect" parent="."]
visible = false
margin_right = 530.0
margin_bottom = 384.0
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bombo"]
playback_speed = 2.0
anims/BomboSlideBack = SubResource( 2 )
anims/BomboSlideOut = SubResource( 3 )
anims/FadeBombo = SubResource( 4 )

[node name="Blink" type="TextureRect" parent="Bombo"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bombo/Blink"]
autoplay = "Blinking"
anims/Blinking = SubResource( 5 )

[node name="P035" type="TextureRect" parent="Bombo"]
visible = false
margin_left = 260.0
margin_top = 140.0
margin_right = 340.0
margin_bottom = 220.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Bombo/P035"]
stream = ExtResource( 9 )

[node name="GenderSelect" type="Node2D" parent="."]
visible = false
script = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GenderSelect"]
anims/FadeIn = SubResource( 6 )

[node name="BackGround" type="TextureRect" parent="GenderSelect"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 11 )

[node name="GenderColor" type="TextureRect" parent="GenderSelect"]
margin_right = 1280.0
margin_bottom = 384.0
texture = ExtResource( 12 )
stretch_mode = 2

[node name="AnimationPlayerSlide" type="AnimationPlayer" parent="GenderSelect/GenderColor"]
anims/ColorSlide = SubResource( 7 )

[node name="Boy" type="TextureRect" parent="GenderSelect"]
margin_left = 40.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 260.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 80, 80 )
texture = ExtResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GenderSelect/Boy"]
anims/Shrink = SubResource( 8 )

[node name="Neutral" type="TextureRect" parent="GenderSelect"]
margin_left = 180.0
margin_top = 100.0
margin_right = 340.0
margin_bottom = 260.0
rect_pivot_offset = Vector2( 80, 80 )
texture = ExtResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GenderSelect/Neutral"]
anims/Shrink = SubResource( 9 )

[node name="Girl" type="TextureRect" parent="GenderSelect"]
margin_left = 320.0
margin_top = 100.0
margin_right = 480.0
margin_bottom = 260.0
rect_pivot_offset = Vector2( 80, 80 )
texture = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GenderSelect/Girl"]
anims/Shrink = SubResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GenderSelect"]
stream = ExtResource( 16 )

[node name="ConfirmationBox" type="NinePatchRect" parent="GenderSelect"]
margin_left = 410.0
margin_top = 178.0
margin_right = 510.0
margin_bottom = 278.0
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 48, 48 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Label" type="Label" parent="GenderSelect/ConfirmationBox"]
margin_left = 30.0
margin_top = 20.0
margin_right = 70.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 11 )
custom_constants/line_spacing = 20
text = "UI_OPTIONS"

[node name="Arrow" type="TextureRect" parent="GenderSelect/ConfirmationBox"]
margin_left = 10.0
margin_top = 15.0
margin_right = 22.0
margin_bottom = 43.0
texture = ExtResource( 19 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GenderSelect/ConfirmationBox/Arrow"]
stream = ExtResource( 20 )

[node name="Dialoge" type="NinePatchRect" parent="GenderSelect"]
margin_left = 10.0
margin_top = 280.0
margin_right = 502.0
margin_bottom = 374.0
texture = ExtResource( 21 )
region_rect = Rect2( 8, 2, 66, 74 )
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Text" type="Label" parent="GenderSelect/Dialoge"]
margin_left = 17.0
margin_top = 15.0
margin_right = 462.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 12 )
custom_constants/line_spacing = 20

[node name="Fade" type="ColorRect" parent="."]
visible = false
margin_right = 512.0
margin_bottom = 384.0
color = Color( 0, 0, 0, 0 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
